--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-asyncio>=3.4.3            ; python_version >= '3.3'
-aiohttp>=1.1.5            ; python_version >= '3.3'
-beautifulsoup4>=4.5.1     ; python_version >= '3.3'
-inflect>=0.2.5            ; python_version >= '3.3'
-requests>=2.9.1           ; python_version >= '3.3'
-tabulate>=0.7.5           ; python_version >= '3.3'
-tqdm>=4.10.0              ; python_version >= '3.3'
+lxml>=4.6.4               ; python_version >= '3.6'
+asyncio>=3.4.3            ; python_version >= '3.6'
+aiohttp>=3.8.1            ; python_version >= '3.6'
+beautifulsoup4>=4.10.0    ; python_version >= '3.6'
+inflect>=5.3.0            ; python_version >= '3.6'
+requests>=2.26.0          ; python_version >= '3.6'
+tabulate>=0.8.9           ; python_version >= '3.6'
+tqdm>=4.62.3              ; python_version >= '3.6'
